02-loadbalancer/external-dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: kube-system
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      containers:
      - name: external-dns
        image: registry.opensource.zalan.do/teapot/external-dns:v0.5.4
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=${K8S_DOMAIN}
        - --provider=aws
        - --policy=upsert-only
        - --registry=txt
        - --txt-owner-id=${K8S_CLUSTER}
      serviceAccount: external-dns
      securityContext: {}
...
