02-loadbalancer/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: ${K8S_SUBNET}
    alb.ingress.kubernetes.io/security-groups: ${K8S_SECURITYGROUP}
    alb.ingress.kubernetes.io/tags: eks=${K8S_CLUSTER}
spec:
  rules:
  - host: echo.${K8S_DOMAIN}
    http:
      paths:
        - path: /
          backend:
            serviceName: echoserver
            servicePort: 80
...
